@@ -243,6 +243,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   v1.6 now die with a backtrace. They will be removed in v1.8
 * dumpTextPass now skips goes to database for entries that were blank in the
   previous dump, as this may indicate a broken dump.
+* dumpTextPass progress includes percentage of items prefetched
 
 
 == Compatibility ==
